# CUDA-CNN

./: .cproject  .project  CMakeLists.txt  Cifar100Config.txt  Cifar10Config.txt  Config.cpp  Config.h  Config.txt  MemoryMonitor.cpp  MnistConfig.txt  README.md  cuCNN  cuDistortion.cu  cuDistortion.cuh  cuMatrix.cpp  cuMatrix.h  cuMatrixVector.cpp  cuMatrixVector.h  cuTrasformation.cu  cuTrasformation.cuh  dataPretreatment.cu  dataPretreatment.cuh  eigen  log.txt  main.cpp  net.cu  net.cuh  nohup.out  readCIFAR100Data.cpp  readCIFAR100Data.h  readCIFAR10Data.cpp  readCIFAR10Data.h  readChineseData.cpp  readChineseData.h  readMnistData.cpp  readMnistData.h  syslogd  total_code.sh  util.cpp  util.h
Config/: Branch.rar  ChineseConfig.txt  Cifar100Config.txt  Cifar10Config.rar  Cifar10Config.txt  Cifar10Config1.txt  Cifar10Config2.txt  Cifar10Config81.42.txt  MnistConfig - 副本.txt  MnistConfig.rar  MnistConfig.txt  MnistConfig111.rar  新建文本文档.txt
Debug/: makefile  nsightbuilddata  objects.mk  sources.mk  subdir.mk
Release/: .gitignore  Config.d  cuCNN  cuDistortion.d  cuMatrix.d  main.d  makefile  net.d  nsightbuilddata  objects.mk  readMnistData.d  repalce.sh  sources.mk  subdir.mk  util.d
Result/: log.txt
common/: Config.cpp  Config.h  MemoryMonitor.cpp  MemoryMonitor.h  cuBase.cu  cuBase.h  cuMatrix.cpp  cuMatrix.h  cuMatrixVector.cpp  cuMatrixVector.h  track.cpp  track.h  util.cpp  util.cpp~  util.h  util.h~
dataAugmentation/: cuBase.cu  cuBase.h  cuTrasformation.cu  cuTrasformation.cuh  dataPretreatment.cu  dataPretreatment.cuh
layers/: BrachLayer.cu  BrachLayer.h  BranchLayer.cu  BranchLayer.h  CombineLayer.cu  CombineLayer.h  Conv.cu  Conv.h  ConvCFM .cu  ConvCFM .h  ConvCFM.cu  ConvCFM.h  ConvNCFM.cu  ConvNCFM.h  DataLayer.cu  DataLayer.h  FullConnect.cu  FullConnect.h  FullConnnect.cu  LRN.cu  LRN.h  LayerBase.cpp  LayerBase.h  LocalConnect.cu  LocalConnect.h  NIN.cu  NIN.h  One.cu  One.h  Pooling.cu  Pooling.h  SoftMax.cu  SoftMax.h  layers.rar  util.cpp  util.h
(+23 files in other folders)
